Fixed content BG on mobile again

--- a/style.css
+++ b/style.css
@@ -713,11 +713,14 @@ footer a:hover {
 		background-color: #00000050;
 	}
 	.contentbg {
-		background-color: #0000003a;
-		box-shadow: 0px 0px 20px 20px #0000003a;
+		background-color: transparent;
+		box-shadow: none;
 		clip-path: inset(0 0 -100px 0);
 		padding: 10px;
 		margin: 0px;
+	}
+	div.balls-bg {
+		opacity: 0.7;
 	}
 }
 /* Adjust responsiveness on small screens */
